Open Mod UI > Tools and click History for full details:

- fixed Druid's arch druid interaction with circle of the night
- fixed Monk's specialized weapon to have the finesse tag
- fixed Rogue's stroke of luck power usage once per short rest
- fixed Roguish Raven's Deadly Aim damage dealt on reroll hit
- fixed Sorcerous Field Manipulator's displacement on MP