@@ -7,6 +7,7 @@
 - fixed Rogue's stroke of luck power usage once per short rest
 - fixed Roguish Raven's Deadly Aim damage dealt on reroll hit
 - fixed Sorcerous Field Manipulator's displacement on MP
+- tested mod update with game version 1.5.37 beta and this v81
 
 1.4.33.80:
 
