@@ -5,3 +5,4 @@ Open Mod UI > Tools and click History for full details:
 - fixed Rogue's stroke of luck power usage once per short rest
 - fixed Roguish Raven's Deadly Aim damage dealt on reroll hit
 - fixed Sorcerous Field Manipulator's displacement on MP
+- tested mod update with game version 1.5.37 beta and this v81
